Headers no longer align center or have a margin

--- a/media/css/global.css
+++ b/media/css/global.css
@@ -15,15 +15,11 @@ h1 {
 	font-size: 250%;
 	color: #3C5F7F;
 	font-weight: bold;
-	text-align: center;
-	margin-top: 50px;
 }
 h2 {
-	font-size: 200%;
+	font-size: 150%;
 	color: #3C5F7F;
 	font-weight: bold;
-	text-align: center;
-	margin-top: 20px;
 }
 
 /* ==================== */
